website logo change

--- a/index.html
+++ b/index.html
@@ -3,13 +3,15 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Your Magazine</title>
+    <title>Rile Magazine</title>
     <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
 
 <header class="main-header">
-    <div class="logo">YourMagazine</div>
+    <div class="logo">
+        <img src="RILESWORDMARK.png" alt="Rile" class="logo-image">
+    </div>
     <button class="menu-toggle" aria-label="Toggle menu">☰</button>
     <nav class="navbar">
         <ul class="nav-menu">
@@ -39,7 +41,7 @@
             <div class="featured-content">
                 <span class="category-tag">Music & Film</span>
                 <h2>Tokyo‑Ga - The Contrast of Japan in the 80s</h2>
-                <p class="excerpt">Wenders wanders a city racing forward, searching for Ozu’s stillness.</p>
+                <p class="excerpt">Wenders wanders a city racing forward, searching for Ozu's stillness.</p>
                 <p class="meta">Feb 18, 2026 · 6 min read</p>
             </div>
         </article>
@@ -58,7 +60,7 @@
                 <img src="https://picsum.photos/400/250?random=3" alt="Love Hotels">
                 <div class="featured-content">
                     <span class="category-tag">Culture</span>
-                    <h3>Documenting Japan’s Most Peculiar Love Hotels</h3>
+                    <h3>Documenting Japan's Most Peculiar Love Hotels</h3>
                     <p class="meta">Feb 14, 2026</p>
                 </div>
             </article>
@@ -80,7 +82,7 @@
             </article>
         </div>
 
-        <!-- Category Sections (inspired by Yokogao Mag) -->
+        <!-- Category Sections -->
         <section class="category-section">
             <h2 class="section-title">Art & Design</h2>
             <div class="category-grid">
@@ -144,7 +146,7 @@
             <h3>Creator Spotlight</h3>
             <p>Follow a day in the life of Japanese creators</p>
             <ul>
-                <li><a href="#">Yutaro Saito’s monthly fashion column</a></li>
+                <li><a href="#">Yutaro Saito's monthly fashion column</a></li>
                 <li><a href="#">Join a man who cleans Tokyo voluntarily</a></li>
             </ul>
         </div>
@@ -163,7 +165,7 @@
 </main>
 
 <footer class="site-footer">
-    <p>© 2026 YourMagazine. All rights reserved.</p>
+    <p>© 2026 Rile Magazine. All rights reserved.</p>
 </footer>
 
 <script>
