--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rile Magazine</title>
+    <link rel="icon" type="image/png" href="RILESCOMBIMARK.PNG">
+    <link rel="shortcut icon" type="image/png" href="RILESCOMBIMARK.PNG">
     <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
@@ -25,7 +27,7 @@
                     <li><a href="#">Fashion</a></li>
                     <li><a href="#">Music & Film</a></li>
                     <li><a href="#">Gaming</a></li>
-                    <li><a href="#">Society</a></li>
+                    <li><a href="#">Radar</a></li>
                 </ul>
             </li>
         </ul>
@@ -73,11 +75,11 @@
                 </div>
             </article>
             <article class="featured-post secondary">
-                <img src="https://picsum.photos/400/250?random=5" alt="Gainax">
+                <img src="https://picsum.photos/400/250?random=5" alt="Emerging Artists">
                 <div class="featured-content">
-                    <span class="category-tag">Manga & Anime</span>
-                    <h3>The Rise, Rupture, and Collapse of Gainax</h3>
-                    <p class="meta">Jan 7, 2026</p>
+                    <span class="category-tag">Radar</span>
+                    <h3>Tokyo's Underground Scene - 5 Artists to Watch in 2026</h3>
+                    <p class="meta">Feb 10, 2026</p>
                 </div>
             </article>
         </div>
@@ -124,6 +126,28 @@
                 </article>
             </div>
         </section>
+
+        <!-- Radar Section -->
+        <section class="category-section">
+            <h2 class="section-title">Radar</h2>
+            <div class="category-grid">
+                <article class="category-post">
+                    <img src="https://picsum.photos/300/200?random=12" alt="Emerging Designers">
+                    <h3>Next Wave: 5 Emerging Designers from Tokyo's Avant-Garde Scene</h3>
+                    <p class="meta">Feb 8, 2026</p>
+                </article>
+                <article class="category-post">
+                    <img src="https://picsum.photos/300/200?random=13" alt="Underground Music">
+                    <h3>The New Sound of Shibuya - Underground Labels to Follow</h3>
+                    <p class="meta">Feb 3, 2026</p>
+                </article>
+                <article class="category-post">
+                    <img src="https://picsum.photos/300/200?random=14" alt="Digital Art">
+                    <h3>Digital Native: How Young Artists Are Redefining Japanese Aesthetics</h3>
+                    <p class="meta">Jan 28, 2026</p>
+                </article>
+            </div>
+        </section>
     </section>
 
     <!-- Sidebar (Right Column) -->
@@ -135,19 +159,8 @@
                 <li><a href="#">Culture</a></li>
                 <li><a href="#">Fashion</a></li>
                 <li><a href="#">Music & Film</a></li>
-                <li><a href="#">Manga & Anime</a></li>
                 <li><a href="#">Gaming</a></li>
-                <li><a href="#">Society</a></li>
-                <li><a href="#">Food</a></li>
-            </ul>
-        </div>
-
-        <div class="sidebar-widget">
-            <h3>Creator Spotlight</h3>
-            <p>Follow a day in the life of Japanese creators</p>
-            <ul>
-                <li><a href="#">Yutaro Saito's monthly fashion column</a></li>
-                <li><a href="#">Join a man who cleans Tokyo voluntarily</a></li>
+                <li><a href="#">Radar</a></li>
             </ul>
         </div>
     </aside>
