--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Rile Magazine</title>
+    <title>Riles Magazine</title>
     <link rel="icon" type="image/png" href="RILESCOMBIMARK.PNG">
     <link rel="shortcut icon" type="image/png" href="RILESCOMBIMARK.PNG">
     <link rel="stylesheet" href="styles.css" />
@@ -12,7 +12,7 @@
 
 <header class="main-header">
     <div class="logo">
-        <img src="RILESWORDMARK.png" alt="Rile" class="logo-image">
+        <img src="RILESWORDMARK.png" alt="Riles" class="logo-image">
     </div>
     <button class="menu-toggle" aria-label="Toggle menu">☰</button>
     <nav class="navbar">
@@ -167,7 +167,7 @@
 </main>
 
 <footer class="site-footer">
-    <p>© 2026 Rile Magazine. All rights reserved.</p>
+    <p>© 2026 Riles Magazine. All rights reserved.</p>
 </footer>
 
 <script>
