--- a/index.html
+++ b/index.html
@@ -75,24 +75,29 @@
                 </div>
             </article>
             <article class="featured-post secondary">
-                <img src="https://picsum.photos/400/250?random=5" alt="Emerging Artists">
-                <div class="featured-content">
-                    <span class="category-tag">Radar</span>
-                    <h3>Tokyo's Underground Scene - 5 Artists to Watch in 2026</h3>
-                    <p class="meta">Feb 10, 2026</p>
-                </div>
-            </article>
+              <a href="article-tokyo-ga.html" style="text-decoration: none; color: inherit;">
+                  <img src="https://picsum.photos/400/250?random=1" alt="Tokyo‑Ga">
+                  <div class="featured-content">
+                      <span class="category-tag">Music & Film</span>
+                      <h3>Tokyo‑Ga - The Contrast of Japan in the 80s</h3>
+                      <p class="meta">Feb 18, 2026</p>
+                  </div>
+              </a>
+          </article>
         </div>
 
         <!-- Category Sections -->
+         
         <section class="category-section">
             <h2 class="section-title">Art & Design</h2>
             <div class="category-grid">
-                <article class="category-post">
-                    <img src="https://picsum.photos/300/200?random=6" alt="1-Bit Nostalgia">
-                    <h3>1-Bit Nostalgia - Super Kaylo Demakes Pop Culture Classics</h3>
-                    <p class="meta">Jan 26, 2026</p>
-                </article>
+              <article class="category-post">
+                <a href="article-anime-renaissance.html" style="text-decoration: none; color: inherit;">
+                    <img src="https://picsum.photos/300/200?random=2" alt="Anime Goes Renaissance">
+                    <h3>Anime Goes Renaissance - How Ricardo Paredes Reworks the Canon</h3>
+                    <p class="meta">Feb 15, 2026</p>
+                </a>
+            </article>
                 <article class="category-post">
                     <img src="https://picsum.photos/300/200?random=7" alt="Vaporwave Art">
                     <h3>Japan as Interface - Vaporwave Art Culture of the 1990s</h3>
