--- a/index.html
+++ b/index.html
@@ -50,33 +50,39 @@
 
         <!-- Secondary Featured Posts Grid -->
         <div class="secondary-grid">
-            <article class="featured-post secondary">
-                <img src="https://picsum.photos/400/250?random=2" alt="Anime Goes Renaissance">
-                <div class="featured-content">
-                    <span class="category-tag">Art & Design</span>
-                    <h3>Anime Goes Renaissance - How Ricardo Paredes Reworks the Canon</h3>
-                    <p class="meta">Feb 15, 2026</p>
-                </div>
-            </article>
-            <article class="featured-post secondary">
-                <img src="https://picsum.photos/400/250?random=3" alt="Love Hotels">
-                <div class="featured-content">
-                    <span class="category-tag">Culture</span>
-                    <h3>Documenting Japan's Most Peculiar Love Hotels</h3>
-                    <p class="meta">Feb 14, 2026</p>
-                </div>
-            </article>
-            <article class="featured-post secondary">
-                <img src="https://picsum.photos/400/250?random=4" alt="Mei Semones">
-                <div class="featured-content">
-                    <span class="category-tag">Music & Film</span>
-                    <h3>Mei Semones - Writing Between Languages</h3>
-                    <p class="meta">Feb 4, 2026</p>
-                </div>
-            </article>
-            <article class="featured-post secondary">
+          <article class="featured-post secondary">
+              <a href="article-anime-renaissance.html" style="text-decoration: none; color: inherit;">
+                  <img src="https://picsum.photos/400/250?random=2" alt="Anime Goes Renaissance">
+                  <div class="featured-content">
+                      <span class="category-tag">Art & Design</span>
+                      <h3>Anime Goes Renaissance - How Ricardo Paredes Reworks the Canon</h3>
+                      <p class="meta">Feb 15, 2026</p>
+                  </div>
+              </a>
+          </article>
+          <article class="featured-post secondary">
+              <a href="#" style="text-decoration: none; color: inherit;">
+                  <img src="https://picsum.photos/400/250?random=3" alt="Love Hotels">
+                  <div class="featured-content">
+                      <span class="category-tag">Culture</span>
+                      <h3>Documenting Japan's Most Peculiar Love Hotels</h3>
+                      <p class="meta">Feb 14, 2026</p>
+                  </div>
+              </a>
+          </article>
+          <article class="featured-post secondary">
+              <a href="#" style="text-decoration: none; color: inherit;">
+                  <img src="https://picsum.photos/400/250?random=4" alt="Mei Semones">
+                  <div class="featured-content">
+                      <span class="category-tag">Music & Film</span>
+                      <h3>Mei Semones - Writing Between Languages</h3>
+                      <p class="meta">Feb 4, 2026</p>
+                  </div>
+              </a>
+          </article>
+          <article class="featured-post secondary">
               <a href="article-tokyo-ga.html" style="text-decoration: none; color: inherit;">
-                  <img src="https://picsum.photos/400/250?random=1" alt="Tokyo‑Ga">
+                  <img src="https://picsum.photos/400/250?random=5" alt="Tokyo‑Ga">
                   <div class="featured-content">
                       <span class="category-tag">Music & Film</span>
                       <h3>Tokyo‑Ga - The Contrast of Japan in the 80s</h3>
@@ -84,8 +90,7 @@
                   </div>
               </a>
           </article>
-        </div>
-
+      </div>
         <!-- Category Sections -->
          
         <section class="category-section">
