--- a/index.html
+++ b/index.html
@@ -39,24 +39,24 @@
     <section class="featured-grid">
         <!-- Primary Featured Post -->
         <article class="featured-post primary">
-            <img src="https://picsum.photos/800/400?random=1" alt="Featured story about Japanese culture">
+            <img src="" alt="Featured story about Japanese culture">
             <div class="featured-content">
-                <span class="category-tag">Music & Film</span>
-                <h2>Tokyo‑Ga - The Contrast of Japan in the 80s</h2>
-                <p class="excerpt">Wenders wanders a city racing forward, searching for Ozu's stillness.</p>
-                <p class="meta">Feb 18, 2026 · 6 min read</p>
+                <span class="category-tag">Culture</span>
+                <h2>Reject modernity, embrace tradition.</h2>
+                <p class="excerpt">Being proud of our traditional wear means being proud of our history.</p>
+                <p class="meta">Feb 7, 2026</p>
             </div>
         </article>
 
         <!-- Secondary Featured Posts Grid -->
         <div class="secondary-grid">
           <article class="featured-post secondary">
-              <a href="article-anime-renaissance.html" style="text-decoration: none; color: inherit;">
-                  <img src="https://picsum.photos/400/250?random=2" alt="Anime Goes Renaissance">
+              <a href="ARTICLES/article-filipiniana.html" style="text-decoration: none; color: inherit;">
+                  <img src="IMAGES/FASHION/LARIENFEB7.png" alt="FILIPINIANA">
                   <div class="featured-content">
-                      <span class="category-tag">Art & Design</span>
-                      <h3>Anime Goes Renaissance - How Ricardo Paredes Reworks the Canon</h3>
-                      <p class="meta">Feb 15, 2026</p>
+                      <span class="category-tag">Culture</span>
+                      <h3>Reject modernity, embrace tradition.</h3>
+                      <p class="meta">Feb 7, 2026</p>
                   </div>
               </a>
           </article>
