--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <div class="featured-content">
                 <span class="category-tag">Culture</span>
                 <h2>Reject modernity, embrace tradition.</h2>
-                <p class="excerpt">Being proud of our traditional wear means being proud of our history. A deep dive into Filipiniana fashion and its cultural significance.</p>
+                <p class="excerpt">Being proud of our traditional wear means being proud of our history. A short thought into Filipiniana fashion and its cultural significance.</p>
                 <p class="meta">Nina Larien De Luna · Feb 7, 2026</p>
             </div>
         </article>
