--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
         <!-- Secondary Featured Posts Grid -->
         <div class="secondary-grid">
-            <a href="ARTICLES\article-filipiniana.html" class="featured-post secondary">
+            <a href="article-filipiniana.html" class="featured-post secondary">
                 <img src="IMAGES/FASHION/LARIENFEB7.png" alt="FILIPINANA">
                 <div class="featured-content">
                     <span class="category-tag">Culture</span>
