--- a/index.html
+++ b/index.html
@@ -57,16 +57,16 @@
                 <div class="featured-content">
                     <span class="category-tag">Culture</span>
                     <h3>Reject modernity, embrace tradition</h3>
-                    <p class="meta">Feb 7, 2026 · 4 min read</p>
+                    <p class="meta">Nina Larien De Luna · Feb 7, 2026</p>
                 </div>
             </a>
             
-            <a href="article-tokyo-ga.html" class="featured-post secondary">
-                <img src="https://picsum.photos/800/450?random=tokyo" alt="Tokyo 1980s">
+            <a href="article-TrenKo.html" class="featured-post secondary">
+                <img src="IMAGES\RADAR\HOJOJAN28.png" alt="TrenKo's in-app UI">
                 <div class="featured-content">
-                    <span class="category-tag">Music & Film</span>
-                    <h3>Tokyo‑Ga - The Contrast of Japan in the 80s</h3>
-                    <p class="meta">Wim Wenders · Feb 18, 2026</p>
+                    <span class="category-tag">Radar</span>
+                    <h3>TrenKo, Metro Manila’s Real-Time Train Guide for Everyday Commuters</h3>
+                    <p class="meta">Hiroshi Hojo · Jan 28, 2026</p>
                 </div>
             </a>
         </div>
