--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <ul class="nav-menu">
             <li><a href="index.html" class="active">Home</a></li>
             <li><a href="#">Articles</a></li>
-            <li><a href="brief.html">Brief</a></li>
+            <li><a href="brief.html">About</a></li>
             <li class="dropdown">
                 <a href="#">Categories</a>
                 <ul class="dropdown-menu">
