--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Riles Magazine</title>
-    <link rel="icon" type="image/png" href="RILESCOMBIMARK.PNG">
-    <link rel="shortcut icon" type="image/png" href="RILESCOMBIMARK.PNG">
+    <link rel="icon" type="image/x-icon" href="RILESCOMBIMARK.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="RILESCOMBIMARK.ico">
     <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
