--- a/article-TrenKo.html
+++ b/article-TrenKo.html
@@ -183,6 +183,7 @@
         <ul class="nav-menu">
             <li><a href="index.html">Home</a></li>
             <li><a href="#">Articles</a></li>
+            <li><a href="https://jyanafaelynn9.my.canva.site/riles-about-us">About</a></li>
             <li class="dropdown">
                 <a href="#">Categories</a>
                 <ul class="dropdown-menu">
@@ -217,7 +218,7 @@
         <img src="IMAGES\RADAR\HOJOJAN28.png" alt="TrenKo's in-app UI" class="article-hero-image">
         
         <div class="article-content">
-            <p class="intro"><strong>Enrico's daily struggles is exactly with riding the train si how TrenKo came to be.</strong></p>
+            <p class="intro"><strong>Enrico's daily commute struggles, is exactly how TrenKo came to be.</strong></p>
             
             <h2>TrenKo's story</h2>
             <p>Commuting by train in Metro Manila has rarely been a tranquil experience. Unfamiliar station names, announcements drowned out by noise, and—especially for first-time riders—the constant fear of missing a stop. That experience is exactly how TrenKo came to be. Developed by Enrico Miguel Velasquez, an industrial designer, TrenKo was born out of daily frustration. As a daily commuter, Enrico often found himself second-guessing where he was, which direction he was heading, and how many stations were left. Like many riders, he boarded the train just hoping he wouldn’t miss his stop. Those moments of stress eventually pushed Enrico to turn a personal problem into a practical solution. TrenKo is a smart train companion that automatically detects nearby stations, tracks your ride in real time, shows how many stops remain, and alerts you when and where to transfer. Designed for both first-time riders and seasoned commuters, the app aims to make train travel more intuitive and less stressful. Trenko paves way for encouraging train commute in the metro more, through ease of access; big steps into tackling the ever-growing volume of cars in the city. TrenKo is currently available on iOS, with an Android version planned for the future. Ongoing improvements are driven by real-world use and commuter feedback. At its core, what began as Enrico’s personal goal of building an app to solve his everyday commute has grown into a tool that supports a wider community of students, workers, and families navigating the same rails each day. You can check out Enrico’s work on Behance (https://www.behance.net/enricomcv) and download TrenKo now on the App Store.</p>
