--- a/article-filipiniana.html
+++ b/article-filipiniana.html
@@ -183,6 +183,7 @@
         <ul class="nav-menu">
             <li><a href="index.html">Home</a></li>
             <li><a href="#">Articles</a></li>
+            <li><a href="https://jyanafaelynn9.my.canva.site/riles-about-us">About</a></li>
             <li class="dropdown">
                 <a href="#">Categories</a>
                 <ul class="dropdown-menu">
