--- a/index.html
+++ b/index.html
@@ -92,6 +92,22 @@
             </div>
         </section>
         <!-- CULTURE -->
+        <section class="category-section" id="culture">
+            <h2 class="section-title">Culture</h2>
+            <div class="category-grid">
+                <a href="article-filipiniana.html" class="category-post">
+                    <img src="IMAGES/CULTURE/LARIENFEB7.png" alt="Filpiniana">
+                    <h3>FILIPINIANA</h3>
+                    <p class="meta">Feb 7, 2026</p>
+                    </div>
+                </a>
+                <!--<a href="#" class="category-post">
+                    <img src="#" alt="">
+                    <h3>TITLE</h3>
+                    <p class="meta">DATE</p>
+                </a>-->
+            </div>
+        </section>
         
         <!-- ART & DESIGN -->
         <section class="category-section" id="art-design">
@@ -113,12 +129,12 @@
             </div>
         </section>
         <!-- GAMING -->
-        <section class="category-section" id="art-design">
-            <h2 class="section-title">Art & Design</h2>
+        <section class="category-section" id="gaming">
+            <h2 class="section-title">Gaming</h2>
             <div class="category-grid">
-                <a href="article-TrenKo.html" class="category-post">
+                <a href="article-dreadedhut.html" class="category-post">
                     <img src="IMAGES\GAMING\HOJOJAN29.png" alt="in game screenshot">
-                    <h3>TrenKo, Metro Manila’s Real-Time Train Guide for Everyday Commuters</h3>
+                    <h3>The Dreaded Hut, Survival Horror game inspired by Filipino folklore and myth.</h3>
                     <p class="meta">Jan 28, 2026</p>
                     </div>
                 </a>
