--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <section class="featured-grid">
         <!-- Primary Featured Post -->
         <article class="featured-post primary">
-            <img src="IMAGES/FASHION/LARIENFEB7.png" alt="An Illocano woman in traditional Filipiniana">
+            <img src="IMAGES/CULTURE/LARIENFEB7.png" alt="An Illocano woman in traditional Filipiniana">
             <div class="featured-content">
                 <span class="category-tag">Culture</span>
                 <h2>Reject modernity, embrace tradition.</h2>
@@ -54,7 +54,7 @@
         <!-- Secondary Featured Posts Grid -->
         <div class="secondary-grid">
             <a href="article-filipiniana.html" class="featured-post secondary">
-                <img src="IMAGES/FASHION/LARIENFEB7.png" alt="FILIPINANA">
+                <img src="IMAGES/CULTURE/LARIENFEB7.pngg" alt="FILIPINANA">
                 <div class="featured-content">
                     <span class="category-tag">Culture</span>
                     <h3>Reject modernity, embrace tradition</h3>
