--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <!-- Secondary Featured Posts Grid -->
         <div class="secondary-grid">
             <a href="article-filipiniana.html" class="featured-post secondary">
-                <img src="IMAGES/CULTURE/LARIENFEB7.pngg" alt="FILIPINANA">
+                <img src="IMAGES/CULTURE/LARIENFEB7.png" alt="FILIPINANA">
                 <div class="featured-content">
                     <span class="category-tag">Culture</span>
                     <h3>Reject modernity, embrace tradition</h3>
