--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
             <div class="category-grid">
                 <a href="article-dreadedhut.html" class="category-post">
                     <img src="IMAGES\GAMING\HOJOJAN29.png" alt="in game screenshot">
-                    <h3>The Dreaded Hut, Survival Horror game inspired by Filipino folklore and myth.</h3>
+                    <h3>The Dreaded Hut, Survival Horror game inspired by Filipino folklore and myth</h3>
                     <p class="meta">Jan 28, 2026</p>
                     </div>
                 </a>
@@ -163,7 +163,7 @@
             <ul class="category-list">
                 <li><a href="article-filipiniana.html">Reject modernity, embrace tradition</a></li>
                 <li><a href="article-TrenKo.html">TrenKo: Metro Manila’s Real-Time Train Guide for Everyday Commuters</a></li>
-            
+                <li><a href="article-dreadedhut.html">The Dreaded Hut, Survival Horror game inspired by Filipino folklore and myth</a></li>
             </ul>
         </div>
         
