--- a/index.html
+++ b/index.html
@@ -134,10 +134,10 @@
         <!-- your existing empty widget (you had a commented categories) 
              but we replace with the callout as first widget -->
         <div class="sidebar-widget team-signup-widget">
-            <h3>✎ join the team</h3>
-            <p>Writers, designers, photographers — we want you. Help us shape Riles Magazine.</p>
+            <h3>Become a staff</h3>
+            <p>Help us shape Riles Magazine.</p>
             <!-- this is the "sign up and be part of the team" box you requested -->
-            <a href="#" class="signup-button">SIGN UP →</a>
+            <a href="https://forms.gle/YVAgXaLf1zY8Mfwx8" class="signup-button">SIGN UP →</a>
         </div>
 
         <!-- Weekly Picks (original) -->
