--- a/index.html
+++ b/index.html
@@ -156,13 +156,6 @@
     <p>© 2026 Riles Magazine. All rights reserved.</p>
 </footer>
 
-<script>
-    // Mobile menu toggle (exactly as you had)
-    document.querySelector('.menu-toggle').addEventListener('click', function() {
-        document.querySelector('.navbar').classList.toggle('active');
-    });
-</script>
-
-<!-- note: the new sign-up box is the blue/yellow widget in sidebar -->
+<script src="js/script.js"></script> 
 </body>
 </html>
