--- a/index.html
+++ b/index.html
@@ -156,6 +156,6 @@
     <p>© 2026 Riles Magazine. All rights reserved.</p>
 </footer>
 
-<script src="js/script.js"></script> 
+<script src="script.js"></script> 
 </body>
 </html>
