--- a/article-dreadedhut.html
+++ b/article-dreadedhut.html
@@ -205,7 +205,7 @@
     <article class="full-article">
         <header class="article-header">
             <span class="article-category">Radar</span>
-            <h1>TrenKo, Metro Manila’s Real-Time Train Guide for Everyday Commuters</h1>
+            <h1>The Dreaded Hut</h1>
             <div class="article-meta">
                 <span>By Hiroshi Hojo</span>
                 <span>·</span>
